--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,7 @@ code {
   width: 100%;
   list-style: none;
   text-align: center;
-  font-family: 'Playfair Display', serif;
+  font-family: 'Wix Madefor Display', sans-serif;
   
 }
 
