--- a/src/index.css
+++ b/src/index.css
@@ -163,19 +163,20 @@ code {
 /* for inputbox */
 .defbox{
   width:300px;
-  height: 200px;
-  border-radius: 6px;
+
+  border-radius: 16px;
   border-color: #0d6efd;
+  border-style: solid;
 }
 
 .def_badge_box{
   text-align: right;
 }
 
-.defbox .def_badge_box .def_badge{
-  height: 100%;
+.def_badge{
+  height: 27.333px;
   font-size: 100%;
-  width: 100%;
+  width: 82.656px;
   font-family: 'Times New Roman', Times, serif;
 }
 
@@ -188,7 +189,9 @@ code {
 
 .defbox .content_box .def_textarea{
   background: transparent;
-    border: none;
-    border-bottom: 1.5px solid #0d6efd;
-    outline: none;
+  border: none;
+  border-bottom: 1.5px solid #0d6efd;
+  outline: none;
+  width: 90%;
+  margin: 0 auto;
 }
