--- a/src/index.css
+++ b/src/index.css
@@ -162,7 +162,6 @@ code {
 
 /* for inputbox */
 
-
 .Defbox{
   min-width: 400px;
 }
@@ -188,6 +187,10 @@ code {
   border-style: solid;
   transition: all 0.1s ease;
   cursor: move;
+}
+
+.general_box .term_box .label_box .btn{
+  padding: 0%;
 }
 
 .Defbox .term_box{
@@ -291,12 +294,15 @@ code {
   background-color: #FFE569;
 }
 
-.general_box .term_box .term_label{
+.general_box .term_box .term_label .btn{
   font-weight: bold;
   font-family: 'Times New Roman', Times, serif;
   font-size: 17;
-  cursor: move;
   width: fit-content;
+}
+
+.general_box .term_box .term_label .btn::after{
+  content: none;
 }
 
 .Defbox .term_box .term_label{
@@ -319,8 +325,6 @@ code {
   color: #000;
 }
 
-
-
 .general_box .term_box .input_box .term_input{
   background: transparent;
   border: none;
@@ -332,13 +336,13 @@ code {
 }
 
 .Defbox .term_box .input_box .term_input{
-  border-bottom: #ECF8F9;
+  border-bottom: 1.5px solid #ECF8F9;
   caret-color: #fff;
   color: #fff;
 }
 
 .Propbox .term_box .input_box .term_input{
-  border-bottom: #ECF8F9;
+  border-bottom: 1.5px solid #ECF8F9;
   caret-color: #fff;
   color: #fff;
 }
