--- a/src/index.css
+++ b/src/index.css
@@ -164,22 +164,65 @@ code {
 
 .general_box{
   z-index: 1;
+  padding: 2px;
+  transition: box-shadow 0.1s ease-in-out;
+  border-radius: 16px;
+}
+
+.Def_selected.expanded_box:hover{
+  box-shadow: rgba(13,110,253, 0.4) 0 2px 0 5px, rgba(13,110,253, 0.3) -10px 10px, rgba(13,110,253, 0.2) -15px 15px, rgba(13,110,253, 0.1) -20px 20px, rgba(13,110,253, 0.05) -25px 25px;
+}
+
+.Defbox .selected_term.retracted_term:hover{
+  box-shadow: rgba(13,110,253, 0.4) -5px 5px, rgba(13,110,253, 0.3) -10px 10px, rgba(13,110,253, 0.2) -15px 15px, rgba(13,110,253, 0.1) -20px 20px, rgba(13,110,253, 0.05) -25px 25px;
 }
 
 .Defbox{
   min-width: 400px;
 }
 
+.Prop_selected.expanded_box:hover{
+  box-shadow: rgba(25,135,84, 0.4) 0 2px 0 5px, rgba(25,135,84, 0.3) -10px 10px, rgba(25,135,84, 0.2) -15px 15px, rgba(25,135,84, 0.1) -20px 20px, rgba(25,135,84, 0.05) -25px 25px;
+}
+
+.Propbox .selected_term.retracted_term:hover{
+  box-shadow: rgba(25,135,84, 0.4) -5px 5px, rgba(25,135,84, 0.3) -10px 10px, rgba(25,135,84, 0.2) -15px 15px, rgba(25,135,84, 0.1) -20px 20px, rgba(25,135,84, 0.05) -25px 25px;
+}
+
 .Propbox{
   min-width: 500px;
+}
+
+.Just_selected.expanded_box:hover{
+  box-shadow: rgba(13,202,240, 0.4) 0 2px 0 5px, rgba(13,202,240, 0.3) -10px 10px, rgba(13,202,240, 0.2) -15px 15px, rgba(13,202,240, 0.1) -20px 20px, rgba(13,202,240, 0.05) -25px 25px;
+}
+
+.Justbox .selected_term.retracted_term:hover{
+  box-shadow: rgba(13,202,240, 0.4) -5px 5px, rgba(13,202,240, 0.3) -10px 10px, rgba(13,202,240, 0.2) -15px 15px, rgba(13,202,240, 0.1) -20px 20px, rgba(13,202,240, 0.05) -25px 25px;
 }
 
 .Justbox{
   min-width: 500px;
 }
 
+.Con_selected.expanded_box:hover{
+  box-shadow: rgba(220,53,69, 0.4) 0 2px 0 5px, rgba(220,53,69, 0.3) -10px 10px, rgba(220,53,69, 0.2) -15px 15px, rgba(220,53,69, 0.1) -20px 20px, rgba(220,53,69, 0.05) -25px 25px;
+}
+
+.Conbox .selected_term.retracted_term:hover{
+  box-shadow: rgba(220,53,69, 0.4) -5px 5px, rgba(220,53,69, 0.3) -10px 10px, rgba(220,53,69, 0.2) -15px 15px, rgba(220,53,69, 0.1) -20px 20px, rgba(220,53,69, 0.05) -25px 25px;
+}
+
 .Conbox{
   min-width: 500px;
+}
+
+.Note_selected.expanded_box:hover{
+  box-shadow: rgba(255,193,7, 0.4) 0 2px 0 5px, rgba(255,193,7, 0.3) -10px 10px, rgba(255,193,7, 0.2) -15px 15px, rgba(255,193,7, 0.1) -20px 20px, rgba(255,193,7, 0.05) -25px 25px;
+}
+
+.Notebox .selected_term.retracted_term:hover{
+  box-shadow: rgba(255,193,7, 0.4) -5px 5px, rgba(255,193,7, 0.3) -10px 10px, rgba(255,193,7, 0.2) -15px 15px, rgba(255,193,7, 0.1) -20px 20px, rgba(255,193,7, 0.05) -25px 25px;
 }
 
 .Notebox{
@@ -315,6 +358,7 @@ code {
   font-size: 12px;
   width: auto;
 }
+
 
 
 .Defbox .term_box .term_label{
