--- a/src/index.css
+++ b/src/index.css
@@ -183,7 +183,7 @@ code {
 
 
 
-.selected_Def_selectable.expanded_box:hover{
+.Defbox.selected_box_selectable.expanded_box:hover{
   box-shadow: rgba(13,110,253, 0.4) 0 2px 0 5px, rgba(13,110,253, 0.3) -10px 10px, rgba(13,110,253, 0.2) -15px 15px, rgba(13,110,253, 0.1) -20px 20px, rgba(13,110,253, 0.05) -25px 25px;
 }
 
@@ -191,7 +191,7 @@ code {
   box-shadow: rgba(13,110,253, 0.4) -5px 5px, rgba(13,110,253, 0.3) -10px 10px, rgba(13,110,253, 0.2) -15px 15px, rgba(13,110,253, 0.1) -20px 20px, rgba(13,110,253, 0.05) -25px 25px;
 }
 
-.selected_Def:hover{
+.selected_box:hover{
   cursor: not-allowed;
 }
 
@@ -199,7 +199,7 @@ code {
   min-width: 400px;
 }
 
-.selected_Prop_selectable.expanded_box:hover{
+.Propbox.selected_box_selectable.expanded_box:hover{
   box-shadow: rgba(25,135,84, 0.4) 0 2px 0 5px, rgba(25,135,84, 0.3) -10px 10px, rgba(25,135,84, 0.2) -15px 15px, rgba(25,135,84, 0.1) -20px 20px, rgba(25,135,84, 0.05) -25px 25px;
 }
 
@@ -207,15 +207,12 @@ code {
   box-shadow: rgba(25,135,84, 0.4) -5px 5px, rgba(25,135,84, 0.3) -10px 10px, rgba(25,135,84, 0.2) -15px 15px, rgba(25,135,84, 0.1) -20px 20px, rgba(25,135,84, 0.05) -25px 25px;
 }
 
-.selected_Prop:hover{
-  cursor: not-allowed !important;
-}
 
 .Propbox{
   min-width: 500px;
 }
 
-.selected_Just_selectable.expanded_box:hover{
+.Justbox.selected_box_selectable.expanded_box:hover{
   box-shadow: rgba(13,202,240, 0.4) 0 2px 0 5px, rgba(13,202,240, 0.3) -10px 10px, rgba(13,202,240, 0.2) -15px 15px, rgba(13,202,240, 0.1) -20px 20px, rgba(13,202,240, 0.05) -25px 25px;
 }
 
@@ -227,7 +224,7 @@ code {
   min-width: 500px;
 }
 
-.selected_Con_selectable.expanded_box:hover{
+.Conbox.selected_box_selectable.expanded_box:hover{
   box-shadow: rgba(220,53,69, 0.4) 0 2px 0 5px, rgba(220,53,69, 0.3) -10px 10px, rgba(220,53,69, 0.2) -15px 15px, rgba(220,53,69, 0.1) -20px 20px, rgba(220,53,69, 0.05) -25px 25px;
 }
 
@@ -239,7 +236,7 @@ code {
   min-width: 500px;
 }
 
-.selected_Note_selectable.expanded_box:hover{
+.Notebox.selected_box_selectable.expanded_box:hover{
   box-shadow: rgba(255,193,7, 0.4) 0 2px 0 5px, rgba(255,193,7, 0.3) -10px 10px, rgba(255,193,7, 0.2) -15px 15px, rgba(255,193,7, 0.1) -20px 20px, rgba(255,193,7, 0.05) -25px 25px;
 }
 
@@ -256,6 +253,47 @@ code {
   border-style: solid;
   transition: all 0.1s ease;
   cursor: move;
+}
+
+.general_box.selected_box .term_box:hover{
+  cursor: not-allowed;
+}
+
+.general_box.selected_box .content_box{
+  resize: none;
+}
+
+.general_box.selected_box_selectable .content_box{
+  resize: none;
+}
+
+.general_box.selected_box .content_box:hover{
+  cursor: not-allowed;
+}
+
+.general_box.selected_box .content_box .general_textarea:hover{
+  cursor: not-allowed;
+}
+
+.general_box.selected_box .term_box .label_box .btn:hover{
+  cursor: not-allowed;
+}
+
+.general_box.selected_box_selectable .term_box:hover{
+  cursor: default;
+}
+
+.general_box.selected_box_selectable:hover{
+  cursor: default;
+}
+
+.general_box.selected_box_selectable .content_box:hover{
+  cursor: default;
+  
+}
+
+.general_box.selected_box_selectable .content_box .general_textarea:hover{
+  cursor: default;
 }
 
 .general_box .term_box .label_box .btn{
